2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Restore robustness to `EE` misuse.

	* tmac/an.tmac: Add `an*is-in-example` register to keep track
	state of within-exampleness.  Not doing so can cause a spurious
	use of `EE` to wrongly set the inter-paragraph distance to zero.
	(TH): Initialize register.
	(EX): Test register; if set, ignore macro call and, if
	`CHECKSTYLE` warnings are on, throw diagnostic.  Set register.
	(EE): Test register; if clear, ignore macro call and, if
	`CHECKSTYLE` warnings are on, throw diagnostic.  Clear register.

	* tmac/an-ext.tmac (EX, EE): Similar, using `mX` register.
	Because AT&T troff had no `return` request, invert the sense of
	the tests and put the entire macro bodies inside conditionals.

	This regressed post-1.22.4.  Thanks to Ingo Schwarze for the
	report and a proposed patch.

2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac: Refactor.  Rename `mX` to `mZ` so we can use
	`mX` for an "in-example" state register in a future commit.
	Rename `mE` to `mF` to store the current font's mounting
	position.  Bizarrely, `mF` was not already used for this
	purpose.

2022-08-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libgroff/error.cpp (do_error_with_file_and_line):
	Trivially refactor.  Use separate string constant for invariant
	material.  (This will make it easier to, for example, store the
	diagnostic level strings in an array that can be indexed by
	their corresponding `enum` type.)

2022-08-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (fatal_with_file_and_line)
	(error_with_file_and_line, debug_with_file_and_line): Align more
	closely with GNU Coding Standards regarding diagnostics: don't
	suffix the colon after the program name with a space when
	location information follows.

2022-08-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grohtml/grohtml.1.man: Fix erroneous claim.